result-sum/result-sum.jj
options{}
PARSER_BEGIN(MyNewGrammar)
public class MyNewGrammar
{
public static void main(String
args []) throws ParseException
{
MyNewGrammar parser = new
MyNewGrammar(System.in);
parser.Input();
}
}
PARSER_END(MyNewGrammar)
SKIP :
{
" "
| "\r"
| "\t"
| "\n"
}
TOKEN :
{
< PLUS : "+" >
| < NUM : (["0"-"9"])+ >
}
void Input() :
{
double Result;
}
{
Result=TotolResult() ";"
{
System.out.println("The Result is: "+Result);
}
<EOF>
}
double TotolResult() :
{
double numValue1;
double numValue2=0;
Token t = null;
}
{
numValue1=Number() (t=< PLUS > numValue2=TotolResult() )?
{
System.out.println("TotalResult method is done");
if (t== null) return numValue1;
else return numValue1+numValue2;
}
}
double Number():
{
Token t = null;
}
{
t=< NUM >
{
System.out.println("Number is matched");
return Double.parseDouble(t.image);
}
}
